# multi-agent-triage

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  task-definition.json
.github/workflows/: main.yml
scripts/: create_pinecone_index.py  seed_context.py
src/triage_router/: __init__.py  api.py  cli.py  config.py  embedding_format.py  graph.py  models.py  nodes.py  pinecone_store.py  prompts.py  state.py
tests/: test_api.py  test_routing.py  test_triage.py
